src/index.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(238, 245, 255);
  flex-direction: column;
  min-height: 100vh;
  padding: 1rem;
}

#root {
  min-width: 1000px;
  max-width: 1000px;
}

@media (max-width: 600px) {
  #root {
    min-width: fit-content;
  }
}

@media (max-width: 800px) {
  #root {
    min-width: fit-content;
  }
}

